@@ -1,0 +1,76 @@
+<!DOCTYPE html>
+<!--
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */  -->
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--<link rel="stylesheet" type="text/css" hrtable_with_calculation.php.php?themes=default&type=css">-->
+    <title>INTER-Mediator - Sample - Search for Debugging/MySQL</title>
+    <script src="../../index.php?deffile=longlist.yaml"></script>
+    <script>
+      INTERMediatorOnPage.doBeforeConstruct = function () {
+        INTERMediatorLog.errorMessageByAlert = true
+        INTERMediatorLog.suppressDebugMessageOnPage = true
+        // INTERMediatorOnPage.progressStartDelay = 0
+
+        const params = INTERMediatorOnPage.getURLParametersAsArray()
+        if(params.id){
+          INTERMediator.clearCondition('detail')
+          INTERMediator.addCondition('detail',{field: 'id', operator:'=', value: parseInt(params.id)})
+        }
+      }
+
+      INTERMediatorOnPage.doAfterConstruct = function () {
+        //document.getElementById('wrapper').style.display = 'block'
+      }
+
+      function moveListPage(id) {
+        INTERMediator.moveAnotherURL(`longlist.html?id=${id}`)
+      }
+    </script>
+</head>
+<body>
+<table id="detailTable">
+    <thead>
+    <tr>
+        <td colspan="100">
+            <span data-im-control="enclosure">
+                <span data-im-control="repeater">
+                    <button data-im="detail@id@$onclick" onclick="moveListPage($)">一覧に戻る</button>
+                </span>
+            </span>
+        </td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th>郵便番号</th>
+        <td><input type="text" data-im="detail@f3"></td>
+    </tr>
+    <tr>
+        <th>都道府県</th>
+        <td><input type="text" data-im="detail@f7"></td>
+    </tr>
+    <tr>
+        <th>市区町村</th>
+        <td><input type="text" data-im="detail@f8"></td>
+    </tr>
+    <tr>
+        <th>町域名</th>
+        <td><input type="text" data-im="detail@f9"></td>
+    </tr>
+
+    </tbody>
+</table>
+
+</body>
+</html>
