@@ -1,0 +1,76 @@
+<!DOCTYPE html>
+<!--
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */  -->
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>INTER-Mediator - Sample - Search for Debugging/MySQL</title>
+<!--    <link rel="stylesheet" href="sticky-header-table.css">-->
+    <script src="../../index.php?deffile=longlist.yaml"></script>
+    <script>
+      INTERMediatorOnPage.doBeforeConstruct = function () {
+        // INTERMediatorLog.errorMessageByAlert = true
+        INTERMediatorLog.suppressDebugMessageOnPage = true
+        // INTERMediatorOnPage.progressStartDelay = 0
+      }
+
+      INTERMediatorOnPage.doAfterConstruct = function () {
+        //document.getElementById('wrapper').style.display = 'block'
+      }
+    </script>
+</head>
+<body>
+<div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
+<table class="sticky-header-table">
+    <thead style="height: 100px;">
+    <tr>
+        <th></th>
+        <th>郵便番号</th>
+        <th>都道府県</th>
+        <th>市区町村</th>
+        <th>町域名</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td></td>
+        <td><span data-im="postalcode-md@f3"></span></td>
+        <td><span data-im="postalcode-md@f7"></span></td>
+        <td><span data-im="postalcode-md@f8"></span></td>
+        <td><span data-im="postalcode-md@f9"></span></td>
+    </tr>
+    </tbody>
+</table>
+<table id="detailTable">
+    <tbody>
+    <tr>
+        <th>郵便番号</th>
+        <td><input type="text" data-im="detail-md@f3"></td>
+    </tr>
+    <tr>
+        <th>都道府県</th>
+        <td><input type="text" data-im="detail-md@f7"></td>
+    </tr>
+    <tr>
+        <th>市区町村</th>
+        <td><input type="text" data-im="detail-md@f8"></td>
+    </tr>
+    <tr>
+        <th>町域名</th>
+        <td><input type="text" data-im="detail-md@f9"></td>
+    </tr>
+
+    </tbody>
+</table>
+
+</body>
+</html>
