@@ -1,0 +1,26 @@
+/*
+ Referred from https://csshtml.work/table-scroll/
+ */
+.sticky-header-table {
+    overflow: auto;
+    width: 100%;
+    margin: 0;
+    border-spacing: 0;
+    border-collapse: separate;
+}
+
+.sticky-header-table thead {
+    background: #f2f2f2;
+    position: sticky;
+    top: 0;
+    left: 0;
+    height: 100px;
+}
+
+.sticky-header-table th {
+    white-space: nowrap;
+}
+
+.sticky-header-table td {
+    border-top: none;
+}
