@@ -59,6 +59,9 @@
     <a href="Sample_form/mail_test_MySQL.html">Mail Sending Test</a>
     <br>
     <a href="Sample_forDebugging/numerics.html">Float and Double</a>
+    <br>
+    <a href="Sample_forDebugging/longlist.html">Long List</a>
+    <a href="Sample_forDebugging/longlist-md.html">Long List-master/detail</a>
 </ul>
 <h3>FileMaker Server</h3>
 <ul>
