@@ -381,6 +381,30 @@ const INTERMediator = {
     }, false, true)
   },
 
+  prepareToScrollBack: (contextName, id) => {
+    IMLibLocalContext.setValue("_im_sb_contextName", contextName)
+    IMLibLocalContext.setValue("_im_sb_cid", id)
+  },
+
+  scrollBack: (bias = 0) => {
+    const contextName = IMLibLocalContext.getValue("_im_sb_contextName")
+    const targetId = IMLibLocalContext.getValue("_im_sb_cid")
+    if (targetId && contextName) {
+      const context = IMLibContextPool.contextFromName(contextName)
+      const contextDef = context.getContextDef()
+      const binding = context.binding[`${contextDef.key}=${targetId}`]
+      if (binding) {
+        const target = document.getElementById(binding._im_repeater[0].id)
+        let containingBias = ((target.tagName === "TR") ? target.parentNode.parentNode : target.parentNode).offsetTop
+        window.scrollTo({top: target.offsetTop + containingBias + bias, left: 0, behavior: 'auto'})
+        INTERMediator.prepareToScrollBack('', '')
+        target.animate({
+          background: [target.style.backgroundColor,"#ffffff", "#7e7e7e", target.style.backgroundColor],
+        }, 1000 );
+      }
+    }
+  },
+
   /** Construct Page **
    * Construct the Web Page with DB Data. Usually this method will be called automatically.
    * @param indexOfKeyFieldObject If this parameter is omitted or set to true,
